# vortexxe

./: .clang-format  .gitignore  LICENSE  README.md  VORTEXXE.js  VORTEXXE.wasm  lib.css  scaffold.css  scaffold.js
miyooa30-toolchain/: Dockerfile
model-sprites/: README.md  index.js  jsconfig.json
public/: index.html
public/instructions/: instructions.en.html
scripts/: VortexXe.sh  compile-commands.sh  install_sdl.ps1  miyooa30-build.sh  scan_locstr.py  setup-miyooa30-toolchain.sh
src/: CMakeLists.txt  LibHTML.cpp  LibHTML.h  Makefile  logger.h  main.cpp
src/assets/: resAnims.txt  resSounds.txt  resSprites.txt  translation.en.json  translation.la.json
src/client/: ProgressBar.cpp  ProgressBar.h  Render.cpp  Render.h  Ui.cpp  Ui.h  UiComponentDef.h  keys.hpp
src/game/: GameManager.cpp  GameManager.h  collisions.hpp  physics.hpp  state.h
src/game/actions/: AbstractAction.h
src/game/actions/collisions/: CollideAsteroid.hpp  CollideHomingMine.hpp  CollidePowerup.hpp  CollideSaucer.hpp  CollideShip.hpp
src/game/actions/flow/: DoPlayerDestroyed.hpp  NotifyGameComplete.hpp  SetInputMode.hpp  SetupLevelAfterDestroyed.hpp  SetupNewGame.hpp  SetupNewLevel.hpp
src/game/actions/persistent/: CheckLevelComplete.hpp  ControlHomingMines.hpp  ControlSaucers.hpp  ControlShip.hpp  FlipMenu.hpp
src/game/actions/ship/: ModifyScoreAndBonus.hpp  SelectNextWeapon.hpp  SetBonusAfterMultiplier.hpp
src/game/actions/spawn/: RemoveAsteroid.hpp  RemoveBullet.hpp  RemoveHomingMine.hpp  RemovePowerup.hpp  RemoveSaucer.hpp  SpawnAnimatedParticle.hpp  SpawnAsteroidsForLevel.hpp  SpawnAsteroidsForMenu.hpp  SpawnAsteroidsFromAsteroid.hpp  SpawnBullet.hpp  SpawnHomingMine.hpp  SpawnHomingMinesForLevel.hpp  SpawnNewShip.hpp  SpawnPowerup.hpp  SpawnPowerupsForLevel.hpp  SpawnSaucer.hpp  SpawnSaucersForLevel.hpp  SpawnTextParticle.hpp
src/game/actions/ui/: CheckUpdateHighScore.hpp  FadeIn.hpp  FadeOut.hpp  PlaySound.hpp  SetFadeGaugeValue.hpp
src/game/utils/: StructGauge.hpp  StructTimer.hpp  StructTransform.hpp
src/lib/hiscore/: hiscore.cpp
src/lib/minijsoncpp/: minijsoncpp.h
src/lib/sdl2wrapper/: Animation.cpp  Animation.h  AssetLoader.cpp  AssetLoader.h  Events.cpp  Events.h  Gauge.cpp  Gauge.h  Localization.cpp  Localization.h  Logger.cpp  Logger.h  SDL2Includes.cpp  SDL2Includes.h  Sprite.cpp  Sprite.h  Store.cpp  Store.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  Window.cpp  Window.h
web/: index.html  lib.js  scaffold.js
web/instructions/: instructions.en.html
